--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Flask-Limiter==3.12
 flask-marshmallow==1.3.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.3
+gunicorn
 iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
