--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Flask-Caching==2.3.1
 Flask-Limiter==3.12
 flask-marshmallow==1.3.0
 Flask-SQLAlchemy==3.1.1
+flask-swagger-ui
 greenlet==3.2.3
 gunicorn
 iniconfig==2.1.0
