--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Deprecated==1.2.18
 ecdsa==0.19.1
 Flask==3.1.1
 Flask-Caching==2.3.1
+Flask-Cors==3.0.10
 Flask-Limiter==3.12
 flask-marshmallow==1.3.0
 Flask-SQLAlchemy==3.1.1
