--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,9 @@ Flask-Cors==3.0.10
 Flask-Limiter==3.12
 flask-marshmallow==1.3.0
 Flask-SQLAlchemy==3.1.1
-flask-swagger-ui
+flask-swagger-ui==5.21.0
 greenlet==3.2.3
-gunicorn
+gunicorn==23.0.0
 iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
@@ -33,11 +33,11 @@ packaging==25.0
 pathspec==0.12.1
 platformdirs==4.3.8
 pluggy==1.6.0
+psycopg2==2.9.10
 py==1.11.0
 pyasn1==0.6.1
 pycparser==2.22
 Pygments==2.19.2
-psycopg2
 pytest==8.4.1
 python-jose==3.5.0
 rich==13.9.4
