--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   test:
+    needs: build
     runs-on: ubuntu-latest
 
     steps:
@@ -38,8 +39,8 @@ jobs:
           python -m unittest discover tests
 
   deploy:
+    needs: test
     runs-on: ubuntu-latest
-    needs: test 
 
     steps:
       - name: Checkout repository
