--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,6 +30,14 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Initialize database
+        env:
+          FLASK_ENV: testing
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          SQLALCHEMY_DATABASE_URI: ${{ secrets.DATABASE_URL }}
+        run: |
+          python -c "from flask_app import app, db; with app.app_context(): db.create_all()"
+
       - name: Run unit tests
         env:
           FLASK_ENV: testing
@@ -60,7 +68,15 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-        
+
+      - name: Initialize database
+        env:
+          FLASK_ENV: production
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          SQLALCHEMY_DATABASE_URI: ${{ secrets.DATABASE_URL }}
+        run: |
+          python -c "from flask_app import app, db; with app.app_context(): db.create_all()"
+
       - name: Deploy to production
         uses: johnbeynon/render-deploy-action@v0.0.8
         with: 
