--- a/requirements.txt
+++ b/requirements.txt
@@ -36,9 +36,11 @@ pluggy==1.6.0
 psycopg2==2.9.10
 py==1.11.0
 pyasn1==0.6.1
+psycopg2-binary==2.9.10
 pycparser==2.22
 Pygments==2.19.2
 pytest==8.4.1
+python-dateutil==2.8.2
 python-jose==3.5.0
 rich==13.9.4
 rsa==4.9.1
