--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ psycopg2-binary==2.9.10
 pycparser==2.22
 Pygments==2.19.2
 pytest==8.4.1
+python-dotenv==1.0.0
 python-dateutil==2.8.2
 python-jose==3.5.0
 rich==13.9.4
