--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,6 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install flask-migrate
           pip install -r requirements.txt
 
       - name: List installed packages
@@ -60,6 +61,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install flask-migrate
           pip install -r requirements.txt
 
       - name: List installed packages
