--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ Flask-Caching==2.3.1
 Flask-Cors==3.0.10
 Flask-Limiter==3.12
 flask-marshmallow==1.3.0
-Flask-Migrate==4.0.4
+flask-migrate==4.0.4
 Flask-SQLAlchemy==3.1.1
 flask-swagger-ui==5.21.0
 greenlet==3.2.3
