--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -34,6 +34,8 @@ jobs:
           FLASK_ENV: testing
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           SQLALCHEMY_DATABASE_URI: ${{ secrets.DATABASE_URL }}
+      - name: Debug Flask CLI
+        run: flask --help
         run: flask db upgrade
 
       - name: Run unit tests
@@ -71,6 +73,8 @@ jobs:
           FLASK_ENV: production
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           SQLALCHEMY_DATABASE_URI: ${{ secrets.DATABASE_URL }}
+      - name: Debug Flask CLI
+        run: flask --help
         run: flask db upgrade
 
       - name: Deploy to production
