--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,6 +30,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Apply Alembic migrations
+        run: alembic upgrade head
+
+      - name: Run test with coverage
+        run: pytest --cov=app --cov-report=term-missing
+
       - name: List installed packages
         run: pip list
 
