--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,6 +15,7 @@ jobs:
       FLASK_ENV: testing
       SECRET_KEY: ${{ secrets.SECRET_KEY }}
       SQLALCHEMY_DATABASE_URI: ${{ secrets.DATABASE_URL }}
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
     steps:
       - name: Checkout repository
