--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,7 +11,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     env:
-      FLASK_APP: flask_app.py
+      FLASK_APP: "flask_app:create_app"
       FLASK_ENV: testing
       SECRET_KEY: ${{ secrets.SECRET_KEY }}
       SQLALCHEMY_DATABASE_URI: ${{ secrets.DATABASE_URL }}
