--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,7 +14,7 @@ jobs:
       FLASK_APP: "flask_app:create_app"
       FLASK_ENV: testing
       SECRET_KEY: ${{ secrets.SECRET_KEY }}
-      SQLALCHEMY_DATABASE_URI: ${{ secrets.DATABASE_URL }}
+      #SQLALCHEMY_DATABASE_URI: ${{ secrets.DATABASE_URL }}
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
     steps:
@@ -30,6 +30,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      - name: Debug DATABASE_URL
+        run: echo "DATABASE_URL is set to '${DATABASE_URL}"
       
       - name: Stamp DB to head
         run: flask db stamp head
